changed fetch URL for backend

--- a/RESUMEX.html
+++ b/RESUMEX.html
@@ -694,7 +694,7 @@
       try {
         if (window.fetch && window.location.hostname !== 'localhost') {
           // Assume backend at /summarize_me (optional)
-          const resp = await fetch('/summarize_me', {
+          const resp = await fetch('https://backend-wqir.onrender.com/summarize_me', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify({bio})
@@ -717,7 +717,7 @@
       {
         title: "Graduated B.Sc. in Computer Science",
         date: "2015",
-        desc: "Completed a Bachelor’s degree with honors, focusing on AI and software engineering."
+        desc: "Completed a Bachelorï¿½s degree with honors, focusing on AI and software engineering."
       },
       {
         title: "Software Engineer at TechNova",
@@ -860,7 +860,7 @@
         if (window.fetch && window.location.hostname !== 'localhost') {
           const formData = new FormData();
           formData.append('resume', file);
-          const resp = await fetch('/analyze_resume', {
+          const resp = await fetch('https://backend-wqir.onrender.com/anlyze_resume', {
             method: 'POST',
             body: formData
           });
@@ -898,7 +898,7 @@
       // Backend call (POST /career_match), fallback to placeholder
       try {
         if (window.fetch && window.location.hostname !== 'localhost') {
-          const resp = await fetch('/career_match', {
+          const resp = await fetch('https://backend-wqir.onrender.com/career_match', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify({role})
@@ -955,7 +955,7 @@
       // Backend call (POST /ai_career_advice), fallback to placeholder
       try {
         if (window.fetch && window.location.hostname !== 'localhost') {
-          const resp = await fetch('/ai_career_advice', {
+          const resp = await fetch('https://backend-wqir.onrender.com/career_advice', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify({goal})
@@ -970,10 +970,10 @@
       // Placeholder tips
       careerAdviceResult.innerHTML = `
         <b>Tips:</b><br>
-        • Break your goal "${goal}" into actionable steps.<br>
-        • Network with professionals in your target role.<br>
-        • Keep learning—consider certifications and hands-on projects.<br>
-        • Regularly update your resume and portfolio.<br>
+        ï¿½ Break your goal "${goal}" into actionable steps.<br>
+        ï¿½ Network with professionals in your target role.<br>
+        ï¿½ Keep learningï¿½consider certifications and hands-on projects.<br>
+        ï¿½ Regularly update your resume and portfolio.<br>
         <i>[AI advice placeholder]</i>
       `;
     };
